cleanup so it can be shared

--- a/phil379-config.sty
+++ b/phil379-config.sty
@@ -10,6 +10,13 @@
 
 \DeclareDocumentCommand \Struct { m }{\mathbi #1}
 
+% - `\TMblank` - symbol for a blank
+\DeclareDocumentMacro \TMblank {\sqcup}
+
+% - `\TMstroke` - single stroke symbol on tape
+\DeclareDocumentMacro \TMstroke {I}
+
+
 % I think I like ``countable'' and ``uncountable'' better?
 
 \settexttoken{enumerable}{countable}{countable}
