pull induction chapter from main tree

--- a/phil379.tex
+++ b/phil379.tex
@@ -195,7 +195,8 @@ Computation}}}
 
 \appendix
 
-\olimport{induction}
+\olimport*[methods/induction]{induction}
+
 \def\captionnamefont{\sffamily\color{leadbeater}}
 \def\captiontitlefont{\sffamily\color{leadbeater}}
 
