make both -screen and -print PDFs

--- a/preface.tex
+++ b/preface.tex
@@ -187,5 +187,5 @@ finding.\footnote{The difference between the latter four is not
 these conventions, we will only use the methods of logical proof as
 they should be familiar from a first logic course, with one exception:
 we will make extensive use of the method of \emph{induction} to prove
-results.  \Cref{induction} is devoted to this principle.
+results.  A chapter of the appendix is devoted to this principle.
 
