add credit to Taylor Institute, official AB OER credit text

--- a/phil379.tex
+++ b/phil379.tex
@@ -83,7 +83,7 @@ Dana H\"agg, \emph{University of Calgary}
 
 \vfill
 
-\textsc{winter 2016}
+\textsc{winter 2016} \textit{bis}
 
 \end{raggedleft}
 
@@ -94,16 +94,24 @@ Dana H\"agg, \emph{University of Calgary}
 
 \noindent
 The Open Logic Project would like to acknowledge the generous support
-of the Faculty of Arts of the University of Calgary and the Alberta
-OER Initiative.
+of the \href{http://arts.ucalgary.ca/}{Faculty of Arts} and
+the \href{http://www.ucalgary.ca/taylorinstitute/}{Taylor Institute of
+Teaching and Learning} of the University of Calgary.
 
 \bigskip
+
+\noindent\includegraphics[height=1cm]{ucarts-color}
+
+\medskip
+
+\noindent\includegraphics[height=1cm]{ti-color}
+
+\bigskip\noindent
+This resource was funded by the \href{http://albertaoer.com}{Alberta
+Open Educational Resources (ABOER) Initiative}, which is made possible
+through an investment from the Alberta government.
 
 \noindent\includegraphics[width=4cm]{aboer-color}
-
-\bigskip
-
-\noindent\includegraphics[width=5cm]{ucarts-color}
 
 \vfill
 
