--- a/phil379.tex
+++ b/phil379.tex
@@ -83,14 +83,14 @@ Dana H\"agg, \emph{University of Calgary}
 
 \vfill
 
-\textsc{winter 2016} \textit{bis}
+\textsc{Fall 2016} %\textit{bis}
 
 \end{raggedleft}
 
 
 \newpage
 
-% copyright
+% credits
 
 \noindent
 The Open Logic Project would like to acknowledge the generous support
@@ -114,6 +114,8 @@ through an investment from the Alberta government.
 \noindent\includegraphics[width=4cm]{aboer-color}
 
 \vfill
+
+% copyright
 
 \noindent Illustrations by \href{http://mattleadbeater.com}{Matthew
   Leadbeater}, used under a
