--- a/phil379-print.tex
+++ b/phil379-print.tex
@@ -8,7 +8,9 @@
 
 \documentclass[11pt,openany]{memoir}
 
-\RequirePackage{amsthm,shadethm}
+\RequirePackage{amsthm}
+\RequirePackage{xcolor}
+\RequirePackage[usetwoside=false]{mdframed}
 \RequirePackage[full]{textcomp}
 
 % let's set the whole thing in Baskervald X, with Universalis ADF
@@ -24,37 +26,12 @@
 
 \def\copyright{\textcircled{C}}
 
-% \olpath has to point to the location of the OLP main
-% directory/folder.  We're compiling from subdirectory
-% courses/phil379/, so the main directory is two
-% levels up.
-
-\newcommand{\olpath}{../../}
-
 \def\oljobname{phil379}
-
-% load all the Open Logic definitions. This will also load the
-% local definitions in open-logic-sample-config.sty
-\input{\olpath/sty/open-logic.sty}
-%\input{open-logic.sty}
-
-%\hypersetup{linkcolor=dkleadbeater,citecolor=dkleadbeater}
-
-\pdfminorversion=4
-\tagfalse{olphotos-lowres}
-
-% all links plain black for printing
-
-\hypersetup{hidelinks}
 
 % next line needed for Adobe Acrobat to open the PDF.  may have
 % somethign to do with transparency in the PNG graphics files?
 
 \pdfminorversion=4
-
-% we want all the problems deferred to the end
-
-\input{\olpath/sty/open-logic-defer.sty}
 
 % set stock & paper size to Lulu's Crown Quarto dimensions
 
@@ -120,11 +97,34 @@
 \makeoddhead{leadbeater}{\small\sffamily\color{leadbeater}\rightmark}{}
             {\color{leadbeater}\sffamily\bfseries\thepage}
 
-\setlength\shadeboxsep{6pt} 
-\setlength\shadedtextwidth\textwidth
-\advance\shadedtextwidth-22pt
-
 \usepackage[font={small,it}]{caption}
+
+
+% \olpath has to point to the location of the OLP main
+% directory/folder.  We're compiling from subdirectory
+% courses/phil379/, so the main directory is two
+% levels up.
+
+\newcommand{\olpath}{../../}
+
+% load all the Open Logic definitions. This will also load the
+% local definitions in open-logic-sample-config.sty
+
+\input{\olpath/sty/open-logic.sty}
+
+% we want all the problems deferred to the very end
+
+\input{\olpath/sty/open-logic-defer.sty}
+
+% use high-res versions of photos
+
+\tagfalse{olphotos-lowres}
+
+% all links plain black for printing
+
+\hypersetup{hidelinks}
+
+% end preamble           
 
 \begin{document}
 
