--- a/phil379-print.tex
+++ b/phil379-print.tex
@@ -13,6 +13,10 @@
 \RequirePackage[usetwoside=false]{mdframed}
 \RequirePackage[full]{textcomp}
 
+\usepackage[nonumberlist,toc,style=index]{glossaries}
+\loadglsentries{glossary}
+\makeglossaries
+
 % let's set the whole thing in Baskervald X, with Universalis ADF
 % Standard for sans-serif, and spread the lines a bit to make the text
 % more readable
