--- a/phil379-screen.tex
+++ b/phil379-screen.tex
@@ -14,6 +14,10 @@
 \RequirePackage{mdframed}
 \RequirePackage[full]{textcomp}
 
+\usepackage[nonumberlist,toc,style=index]{glossaries}
+\makeglossaries
+\loadglsentries{glossary}
+
 % let's set the whole thing in Baskervald X, with Universalis ADF
 % Standard for sans-serif, and spread the lines a bit to make the text
 % more readable
