add term to cover

--- a/cover-lulu-quarto.tex
+++ b/cover-lulu-quarto.tex
@@ -67,8 +67,8 @@
 \begin{textblock*}{\spinewidth}(\spinepos,0bp)%
 \noindent\hfil\rotatebox{-90}{% make spine text readable when book is lying cover up
       \hbox to \coverheight{\hfil
-          \huge{\sffamily\bfseries\color{black}
-            Sets, Logic, Computation}\hfil}}\hfil
+          \huge\sffamily\bfseries\color{black}
+            Sets, Logic, Computation\hfil F16\hspace{1cm}}}\hfil
 \end{textblock*}
 \newbox\adjust
 % make front cover
@@ -76,14 +76,18 @@
   \noindent\hfil
   \begin{minipage}[b][\coverheight][s]{.8\spinepos}
     \vspace{2cm}
-      \begin{raggedright}
-  \fontsize{32pt}{34pt}\selectfont\bfseries\sffamily%
-  Sets, Logic, Computation\\
-  \normalfont\fontsize{18pt}{0pt}\selectfont\bfseries\itshape%
-    \rule{.8\spinepos}{5pt}\\[5pt]
-  An Open Logic Text
-\end{raggedright}
-\noindent\vskip2cm\includegraphics[width=.8\spinepos]{illustrations/Cover}
+    \begin{raggedright}
+      \fontsize{32pt}{34pt}\selectfont\bfseries\sffamily%
+      Sets, Logic, Computation\\
+      \normalfont\fontsize{18pt}{0pt}\selectfont\bfseries\itshape%
+      \rule{.8\spinepos}{5pt}\\[5pt]
+      An Open Logic Text
+    \end{raggedright}
+    \noindent\vskip2cm\includegraphics[width=.8\spinepos]{illustrations/Cover}
+    \par\noindent
+    \vskip 2cm
+    \normalfont\fontsize{18pt}{0pt}\selectfont\bfseries\sffamily%
+    \hfill Fall 2016 
   \end{minipage}
   \hfil
   \end{textblock*}
