--- a/phil379-screen.tex
+++ b/phil379-screen.tex
@@ -130,7 +130,13 @@
 
 % colors for links
 
-\hypersetup{linkcolor=dkleadbeater,citecolor=dkleadbeater}
+\hypersetup{
+  allcolors=dkleadbeater,
+%  citecolor=dkleadbeater,
+%  urlcolor=dkleadbeater,
+  pdftitle={Sets, Logic, Computation},
+  pdfauthor = {Open Logic Project}
+}
 
 % end preamble
 
@@ -143,18 +149,21 @@
 
 \begin{titlingpage}
   \pagecolor{leadbeater}
-\begin{textblock*}{14cm}(2cm,2cm)%
-  \begin{raggedright}
-  \fontsize{32pt}{34pt}\selectfont\bfseries\sffamily%
-  Sets, Logic, Computation\\
-  \normalfont\fontsize{18pt}{0pt}\selectfont\bfseries\itshape%
-    \rule{14cm}{5pt}\\[5pt]
-  An Open Logic Text
-\end{raggedright}
+  \begin{textblock*}{14cm}(2cm,2cm)%
+    \begin{raggedright}
+      \fontsize{32pt}{34pt}\selectfont\bfseries\sffamily%
+      Sets, Logic, Computation\\
+      \normalfont\fontsize{18pt}{0pt}\selectfont\bfseries\itshape%
+      \rule{14cm}{5pt}\\[5pt]
+      An Open Logic Text
+    \end{raggedright}
 
-%\vskip2cm\hskip-1cm\includegraphics{illustrations/Cover}
-\vskip2cm\hskip-1cm\includegraphics[scale=.85]{illustrations/Cover}
-  
+\vskip1cm\hskip-1cm\includegraphics[scale=.85]{illustrations/Cover}
+
+\par\noindent
+\vskip 1.5cm
+\normalfont\fontsize{16pt}{0pt}\selectfont\bfseries\sffamily%
+\hfill Fall 2016
 \end{textblock*}
 \
 \end{titlingpage}
