--- a/preface.tex
+++ b/preface.tex
@@ -70,7 +70,7 @@ proofs using them.  Note that understanding these proofs---and being
 able to find and formulate them yourself---is perhaps more important
 than understanding the results, and especially in the first part, and
 especially if you are new to mathematical thinking, it is important
-that you think through the examples and do the problems in \cref{problems}.
+that you think through the examples and problems.
 
 In the first part we will establish one important result, however.
 This result---Cantor's theorem---relies on one of the most striking
@@ -126,11 +126,11 @@ At the time, many found this idea preposterous: just because you can
 describe a structure without contradicting yourself, it surely does
 not follow that such a structure actually exists.  But that is exactly
 what G\"odel's completeness theorem says.  In addition to this
-paradoxical---and certainly philosophically intriguing aspect---the
+paradoxical---and certainly philosophically intriguing---aspect, the
 completeness theorem also has two important applications which allow
 us to prove further results about the existence of structures which
 make given sentences true.  These are the compactness and the
-L\"owenheim-Skolem theorem.
+L\"owenheim-Skolem theorems.
 
 In the third part, we connect logic with computability.  Again, there
 is a historical connection: David Hilbert had posed as a fundamental
@@ -141,15 +141,15 @@ tables, and since there are only finitely many of them, the method
 eventually yields a correct answer.  Such a straightforward method is
 not possible for first-order logic, since the number of possible
 structures is infinite (and structures themselves may be
-infinite). Logicians were working on finding a more ingenious methods
-for years.  Two logicians---Alonzo Church and Alan Turing---eventually
-established that there is no such method.  In order to do this, it was
-necessary to first provide a precise definition of what a
-mechanical method is in general. If an effective method had been
-proposed, anyone would have recognized it as an effective method. To
-prove that no effective method exists, you have to define ``effective
-method'' first and give an impossibility proof on the basis of that
-definition.  This is what Turing did: he proposed the idea of a Turing
+infinite). Logicians were working to find a more ingenious methods for
+years.  Alonzo Church and Alan Turing eventually established that
+there is no such method.  In order to do this, it was necessary to
+first provide a precise definition of what a mechanical method is in
+general. If a decision procedure had been proposed, presumably it
+would have been recognized as an effective method. To prove that no
+effective method exists, you have to define ``effective method'' first
+and give an impossibility proof on the basis of that definition.  This
+is what Turing did: he proposed the idea of a Turing
 machine\footnote{Turing of course did not call it that himself.} as a
 mathematical model of what a mechanical procedure can, in principle,
 do.  This is another example of a \emph{conceptual analysis} of an
@@ -163,7 +163,7 @@ finally that Hilbert's ``decision problem'' (for logic) also cannot.
 This text is mathematical, in the sense that we discuss mathematical
 definitions and prove our results mathematically.  But it is not
 mathematical in the sense that you need extensive mathematical
-background knowledge.  Nothing in this text requires advanced
+background knowledge.  Nothing in this text requires
 knowledge of algebra, trigonometry, or calculus.  We have made a
 special effort to also not require any familiarity with the way
 mathematics works: in fact, part of the point is to \emph{develop} the
