select specific bibliographies

--- a/include/summary-4.tex
+++ b/include/summary-4.tex
@@ -29,5 +29,9 @@ In general, infinite sets can be compared sizewise: $X$ and $Y$ are
 the same size, or \emph{equinumerous}, if there is a bijection between
 them. We can also define that $X$ is no larger than~$Y$ ($\card{X} \le
 \card{Y}$) if there is an injective function from $X$ to
-$Y$. \emph{Cantor's theorem} says that for any $X$, $\card{X} <
-\card{\Pow{X}}$.
+$Y$. By the Schr\"oder-Bernstein Theorem, this in fact provides a
+size-wise order of infinite sets.  Finally, \emph{Cantor's theorem}
+says that for any $X$, $\card{X} < \card{\Pow{X}}$. This is a
+generalization of our result that $\Pow{\Int^+}$ is uncountable, and
+shows that there are not just two, but infinitely many levels of
+infinity.
