--- a/phil379.tex
+++ b/phil379.tex
@@ -162,7 +162,7 @@ Computation}}}
 \noindent\hskip-1cm\includegraphics{illustrations/SkolemChapter}
 \vfill
 
-\include{include/preface}
+\input{include/preface}
 
 \cleartoverso 
 
@@ -218,7 +218,25 @@ Computation}}}
 \def\figurename{Fig.}
 \setlength{\olphotowidth}{.45\textwidth}
 
-\olimport*[history/biographies]{biographies}
+\chapter{Biographies}
+
+\olimport*[history/biographies]{georg-cantor}
+
+\olimport*[history/biographies]{alonzo-church}
+
+\olimport*[history/biographies]{gerhard-gentzen}
+
+\olimport*[history/biographies]{kurt-goedel}
+
+\olimport*[history/biographies]{emmy-noether}
+
+\olimport*[history/biographies]{bertrand-russell}
+
+\olimport*[history/biographies]{alfred-tarski}
+
+\olimport*[history/biographies]{alan-turing}
+
+\olimport*[history/biographies]{ernst-zermelo}
 
 \backmatter
 
