typos corrected, version W17

--- a/include/summary-4.tex
+++ b/include/summary-4.tex
@@ -1,5 +1,5 @@
 The size of a set~$X$ can be measured by a natural number if the set
-is finite, and sizes can be compared by comparing their sizes. If sets
+is finite, and sizes can be compared by comparing these numbers. If sets
 are infinite, things are more complicated.  The first level of
 infinity is that of \emph{countably infinite} sets. A set~$X$ is
 countable if its elements can be arranged in an \emph{enumeration}, a
@@ -16,7 +16,7 @@ set is uncountable: directly, using a \emph{diagonal argument}, or by
 \emph{reduction}. To give a diagonal argument, we assume that the
 set~$X$ in question is countable, and use a hypothetical enumeration
 to define an element of~$X$ which, by the very way we define it, is
-guaranteed to be differnt from every element in the enumeration. So
+guaranteed to be different from every element in the enumeration. So
 the enumeration can't be an enumeration of all of~$X$ after all, and
 we've shown that no enumeration of~$X$ can exist.  A reduction shows
 that $X$ is uncountable by associating every element of some known
