--- a/include/summary-8.tex
+++ b/include/summary-8.tex
@@ -11,7 +11,7 @@ constants. This results in a \emph{saturated} consistent set of
 sentences containing~$\Gamma$. It is still consistent. Now we take
 that set and extend it to a \emph{maximally consistent set}.  A
 maximally consistent set has the nice property that for any
-sentence~$!A$, either $!A$ or $!A$ is in the set. Since we started
+sentence~$!A$, either $!A$ or $\lnot !A$ is in the set. Since we started
 from a saturated set, we now have a saturated and maximally consistent
 set of sentences~$\Gamma^*$ that includes~$\Gamma$. From this set it
 is now possible to define a structure~$\Struct{M}$ such that
