--- a/phil379.tex
+++ b/phil379.tex
@@ -89,7 +89,7 @@ Dana H\"agg, \emph{University of Calgary}
 
 \vfill
 
-\textsc{Fall 2016} \textit{bis}
+\textsc{Winter 2017} %\textit{bis}
 
 \end{raggedleft}
 
