--- a/phil379-screen.tex
+++ b/phil379-screen.tex
@@ -169,7 +169,7 @@
 \par\noindent
 \vskip 1.5cm
 \normalfont\fontsize{16pt}{0pt}\selectfont\bfseries\sffamily%
-\hfill Fall 2016 \textit{bis}
+\hfill Winter 2017 %\textit{bis}
 \end{textblock*}
 \
 \end{titlingpage}
