Minor changes and improvements

--- a/phil379-print.tex
+++ b/phil379-print.tex
@@ -33,8 +33,8 @@
 
 \def\oljobname{phil379}
 
-% next line needed for Adobe Acrobat to open the PDF.  may have
-% somethign to do with transparency in the PNG graphics files?
+% next line needed for Adobe Acrobat to open the PDF. may have
+% something to do with transparency in the PNG graphics files?
 
 \pdfminorversion=4
 
