--- a/phil379-screen.tex
+++ b/phil379-screen.tex
@@ -35,8 +35,8 @@
 
 \def\oljobname{phil379}
 
-% next line needed for Adobe Acrobat to open the PDF.  may have
-% somethign to do with transparency in the PNG graphics files?
+% next line needed for Adobe Acrobat to open the PDF. may have
+% something to do with transparency in the PNG graphics files?
 
 \pdfminorversion=4
 
@@ -115,7 +115,7 @@
 
 
 % \olpath has to point to the location of the OLP main
-% directory/folder.  We're compiling from subdirectory
+% directory/folder. We're compiling from subdirectory
 % courses/phil379/, so the main directory is two
 % levels up.
 
