--- a/include/summary-1.tex
+++ b/include/summary-1.tex
@@ -1,21 +1,21 @@
 A \emph{set} is a collection of objects, the elements of the set. We
-write $x \in X$ if $x$~is an element of~$X$.  Sets are
+write $x \in X$ if $x$~is an element of~$X$. Sets are
 \emph{extensional}---they are completely determined by their elements.
 Sets are specified by \emph{listing} the elements explicitly or by
 giving a property the elements share
 (\emph{abstraction}). Extensionality means that the order or way of
-listing or specifying the elements of a set don't matter. To prove
+listing or specifying the elements of a set doesn't matter. To prove
 that $X$ and~$Y$ are the same set ($X = Y$) one has to prove that
 every element of~$X$ is an element of~$Y$ and vice versa.
 
-Important sets are natural ($\Nat$), integer ($\Int$), rational
-($\Rat$), and real ($\Real$), numbers, but also \emph{strings} ($X^*$)
+Important sets include the natural ($\Nat$), integer ($\Int$), rational
+($\Rat$), and real ($\Real$) numbers, but also \emph{strings} ($X^*$)
 and infinite \emph{sequences} ($X^\omega$) of objects. $X$ is a
 \emph{subset} of $Y$, $X \subseteq Y$, if every element of $X$ is also
 one of~$Y$. The collection of all subsets of a set~$Y$ is itself a
-set, the \emph{power set} $\Pow{Y}$ of~$Y$.  We can form the
+set, the \emph{power set} $\Pow{Y}$ of~$Y$. We can form the
 \emph{union} $X \cup Y$ and \emph{intersection} $X \cap Y$ of sets. An
-\emph{pair} $\tuple{x, y}$ consists of two objects $x$ and~$y$, but in
+\emph{ordered pair} $\tuple{x, y}$ consists of two objects $x$ and~$y$, but in
 that specific order. The pairs $\tuple{x, y}$ and $\tuple{y, x}$ are
 different pairs (unless $x = y$). The set of all pairs $\tuple{x, y}$
 where $x \in X$ and $y\in Y$ is called the \emph{Cartesian product}~$X
