--- a/include/summary-2.tex
+++ b/include/summary-2.tex
@@ -1,11 +1,11 @@
 A \emph{relation}~$R$ on a set~$X$ is a way of relating elements
 of~$X$. We write $Rxy$ if the relation \emph{holds} between $x$
 and~$y$. Formally, we can consider $R$ as the sets of pairs
-$\tuple{x,y} \in X^2$ such that~$Rxy$.  Being less than, greater than,
-equal to, evenly dividing, being the same length, being a subset of,
-being the same size as are all important examples of relations (on
-sets of numbers, strings,or of sets).  \emph{Graphs} are a general way
-of visually representing relation. But a graph can also be seen as a
+$\tuple{x,y} \in X^2$ such that~$Rxy$. Being less than, greater than,
+equal to, evenly dividing, being the same length as, a subset of, and the
+same size as are all important examples of relations (on
+sets of numbers, strings, or of sets). \emph{Graphs} are a general way
+of visually representing relations. But a graph can also be seen as a
 binary relation (the \emph{edge} relation) together with the
 underlying set of \emph{vertices}.
 
@@ -14,10 +14,10 @@ interesting or useful. A relation~$R$ is \emph{reflexive} if
 everything is $R$-related to itself; \emph{symmetric}, if with $Rxy$
 also $Ryx$ holds for any $x$ and $y$; and \emph{transitive} if $Rxy$
 and $Ryz$ guarantees~$Rxz$. Relations that have all three of these
-properties are \emph{equivalence relation}.  A relation is
+properties are \emph{equivalence relations}. A relation is
 \emph{anti-symmetric} if $Rxy$ and $Ryx$
 guarantees~$x=y$. \emph{Partial orders} are those relations that are
-reflexive, anti-symmetric, and transitive.  A \emph{linear order} is
+reflexive, anti-symmetric, and transitive. A \emph{linear order} is
 any partial order which satisfies that for any $x$ and~$y$, either
 $Rxy$ or $Ryx$. (Generally, a relation with this property is
 \emph{connected}).
