--- a/include/summary-4.tex
+++ b/include/summary-4.tex
@@ -1,6 +1,6 @@
 The size of a set~$X$ can be measured by a natural number if the set
 is finite, and sizes can be compared by comparing these numbers. If sets
-are infinite, things are more complicated.  The first level of
+are infinite, things are more complicated. The first level of
 infinity is that of \emph{countably infinite} sets. A set~$X$ is
 countable if its elements can be arranged in an \emph{enumeration}, a
 one-way infinite, possibly gappy list, i.e., when there is a
@@ -18,11 +18,11 @@ set~$X$ in question is countable, and use a hypothetical enumeration
 to define an element of~$X$ which, by the very way we define it, is
 guaranteed to be different from every element in the enumeration. So
 the enumeration can't be an enumeration of all of~$X$ after all, and
-we've shown that no enumeration of~$X$ can exist.  A reduction shows
-that $X$ is uncountable by associating every element of some known
-uncountable set~$Y$ with an element of~$X$ in a bijective way. If this
-is possible, than a hypothetical enumeration of $X$ would yieled an
-enumeration of~$Y$. Since $Y$ is uncountable, no enumeration of~$X$
+we've shown that no enumeration of~$X$ can exist. A reduction shows
+that $X$ is uncountable by associating every element of~$X$ with an
+element of some known uncountable set~$Y$ in a surjective way. If
+this is possible, than a hypothetical enumeration of $X$ would yieled
+an enumeration of~$Y$. Since $Y$ is uncountable, no enumeration of~$X$
 can exist.
 
 In general, infinite sets can be compared sizewise: $X$ and $Y$ are
@@ -30,7 +30,7 @@ the same size, or \emph{equinumerous}, if there is a bijection between
 them. We can also define that $X$ is no larger than~$Y$ ($\card{X} \le
 \card{Y}$) if there is an injective function from $X$ to
 $Y$. By the Schr\"oder-Bernstein Theorem, this in fact provides a
-size-wise order of infinite sets.  Finally, \emph{Cantor's theorem}
+sizewise order of infinite sets. Finally, \emph{Cantor's theorem}
 says that for any $X$, $\card{X} < \card{\Pow{X}}$. This is a
 generalization of our result that $\Pow{\Int^+}$ is uncountable, and
 shows that there are not just two, but infinitely many levels of
