include git revisions on copyright page, fix broken PDF page references

--- a/phil379-print.tex
+++ b/phil379-print.tex
@@ -12,6 +12,7 @@
 \RequirePackage{xcolor}
 \RequirePackage[usetwoside=false]{mdframed}
 \RequirePackage[full]{textcomp}
+\RequirePackage{gitinfo2}
 
 \RequirePackage[pdftex,breaklinks,bookmarks,bookmarksopen,bookmarksopenlevel=1,colorlinks,urlcolor=dark-gray,linkcolor=reflex-blue]{hyperref}
 
