--- a/phil379.tex
+++ b/phil379.tex
@@ -135,6 +135,13 @@ through an investment from the Alberta government.
 
 \vfill
 
+\noindent This version of \texttt{phil379} is revision \gitAbbrevHash{}
+(\gitAuthorDate), with content generated
+from \texttt{OpenLogicProject} revision
+\input{olprevision}
+
+\vfill
+
 % oluselicense generates a license mark that a) licenses the result
 % under a CC-BY licence and b) acknowledges the original source (the
 % OLP). Acknowledgment of the source is a requirement under the
